--- a/README.rdoc
+++ b/README.rdoc
@@ -1,8 +1,8 @@
 # Momerise
 This is a backend of memorizing app.
-[Web client repository](https://github.com/ikuto0608/mwa_client)
-[Mobile client repository](https://github.com/ikuto0608/mwa_client_mobile)
-[Server repository](https://github.com/ikuto0608/mwa_server)        
+* [Web client repository](https://github.com/ikuto0608/mwa_client)
+* [Mobile client repository](https://github.com/ikuto0608/mwa_client_mobile)
+* [Server repository](https://github.com/ikuto0608/mwa_server)
 
 * Ruby version
 2.2.1p85
