--- a/README.rdoc
+++ b/README.rdoc
@@ -4,5 +4,5 @@ This is a backend of memorizing app.
 * [Mobile client repository](https://github.com/ikuto0608/mwa_client_mobile)
 * [Server repository](https://github.com/ikuto0608/mwa_server)
 
-* Ruby version
+#### Ruby version
 2.2.1p85
